<resources>
    <string name="app_name">ThirtyMinuteWorkout</string>
    <string name="full_app_name">The 30-Minute Workout App</string>
    <string name="_30_m_workout">30 Minute Workout</string>
    <string name="cutom_workout">Cutom Workout</string>
    <string name="manual_workout">Manual Workout</string>
    <string name="timed_workout">Timed Workout</string>
    <string name="previous_weight">Previous Weight</string>
    <string name="previous_reps">Previous Reps</string>
    <string name="save_workout">Save workout</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="view_logs">View logs</string>
</resources>
