<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/column_title_highest_weight"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/previous_weight"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toStartOf="@id/column_title_highest_reps"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/column_title_highest_reps"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/previous_reps"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/exercies_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/column_title_highest_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/save_button"
        />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_workout"
        app:layout_constraintTop_toBottomOf="@id/exercies_recycler_view"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/yellowButton"
        />

</android.support.constraint.ConstraintLayout>