<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/manual_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitEnd"
        app:layout_constraintTop_toTopOf="@id/manual_workout_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/manual_workout_button"
        app:layout_constraintBottom_toBottomOf="@id/manual_workout_button"
        android:src="@drawable/ic_timer_off_gray_24dp"
        />

    <Button
        android:id="@+id/manual_workout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_workout"
        app:layout_constraintBottom_toTopOf="@id/timed_workout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />

    <ImageView
        android:id="@+id/timed_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitEnd"
        app:layout_constraintTop_toTopOf="@id/timed_workout_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/timed_workout_button"
        app:layout_constraintBottom_toBottomOf="@id/timed_workout_button"
        android:src="@drawable/ic_timer_gray_24dp"
        />

    <Button
        android:id="@+id/timed_workout_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/timed_workout"
        app:layout_constraintTop_toBottomOf="@id/manual_workout_button"
        app:layout_constraintStart_toStartOf="@id/manual_workout_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="@id/manual_workout_button"
        app:layout_constraintBottom_toTopOf="@id/settings_button"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />

    <ImageView
        android:id="@+id/settings_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitEnd"
        app:layout_constraintTop_toTopOf="@id/settings_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/settings_button"
        app:layout_constraintBottom_toBottomOf="@id/settings_button"
        android:src="@drawable/ic_assignment_black_24dp"
        />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_notes"
        app:layout_constraintTop_toBottomOf="@id/timed_workout_button"
        app:layout_constraintStart_toStartOf="@id/manual_workout_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="@id/manual_workout_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />

</android.support.constraint.ConstraintLayout>